Firewall/kubernetes/Exercise4 - K8S Policies/expressroute-content-policy-SameNS.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: expressroute-content-policy
  namespace: expressroute
spec:
  podSelector:
    matchLabels:
      app: expressroute-content
  
  policyTypes:
  - Ingress
  
  ingress:
  - from:
    - namespaceSelector: 
        matchLabels:
         purpose: expressroute-content
