Firewall/kubernetes/Exercise4 - K8S Policies/firewall-content-policy-exception.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: firewall-content-policy
  namespace: firewall
spec:
  podSelector:
    matchLabels:
      app: firewall-content
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: firewall-content
    - namespaceSelector:
        matchLabels:
          purpose: expressroute-content
      podSelector:
        matchLabels:
          status: exception
